# QtCMake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci_tests.yml
lib/: CMakeLists.txt
lib/qt/: CMakeLists.txt  QtCMake.hpp
